Labor Force Statistics

--- a/CES Employment Data.ipynb
+++ b/CES Employment Data.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:53:26.171011Z",
-     "start_time": "2020-06-01T01:53:26.154016Z"
+     "end_time": "2020-06-01T04:39:41.681109Z",
+     "start_time": "2020-06-01T04:39:41.677109Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:53:28.636526Z",
-     "start_time": "2020-06-01T01:53:26.172995Z"
+     "end_time": "2020-06-01T04:39:44.271150Z",
+     "start_time": "2020-06-01T04:39:41.684105Z"
     }
    },
    "outputs": [],
@@ -55,26 +55,18 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:14.512711Z",
-     "start_time": "2020-06-01T01:53:28.639512Z"
+     "end_time": "2020-06-01T04:39:47.887150Z",
+     "start_time": "2020-06-01T04:39:44.273103Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1 / unknown"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check if file has ben downloaded if not download the file\n",
     "# This could take a while first time downloading the files (over 5 mins)\n",
     "# Does this qualify as web scraping? :-)\n",
     "CESFileName = 'resources/AllCESSeries.txt'\n",
-    "SeriesFileName = 'resources/Series.txt'\n",
-    "IndustryFileName = 'resources/Industries.txt'\n",
+    "SeriesFileName = 'resources/CESSeries.txt'\n",
+    "IndustryFileName = 'resources/CESIndustries.txt'\n",
     "if not os.path.exists(CESFileName) :\n",
     "    url = \"https://download.bls.gov/pub/time.series/ce/ce.data.0.AllCESSeries\"\n",
     "    wget.download(url,CESFileName)\n",
@@ -100,14 +92,16 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:16.835029Z",
-     "start_time": "2020-06-01T01:59:14.515713Z"
+     "end_time": "2020-06-01T04:39:50.150103Z",
+     "start_time": "2020-06-01T04:39:47.889105Z"
     }
    },
    "outputs": [],
    "source": [
     "# Split Industry from Series ID\n",
     "allCES['industry_code'] = allCES['series_id'].str.slice(3,11)\n",
+    "\n",
+    "seriesDF.drop(['begin_year', 'begin_period', 'end_year', 'end_period'],1,inplace=True)\n",
     "\n"
    ]
   },
@@ -116,8 +110,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:20.324035Z",
-     "start_time": "2020-06-01T01:59:16.837015Z"
+     "end_time": "2020-06-01T04:39:53.532113Z",
+     "start_time": "2020-06-01T04:39:50.152105Z"
     }
    },
    "outputs": [
@@ -145,8 +139,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:20.385013Z",
-     "start_time": "2020-06-01T01:59:20.327013Z"
+     "end_time": "2020-06-01T04:39:53.593106Z",
+     "start_time": "2020-06-01T04:39:53.534108Z"
     }
    },
    "outputs": [
@@ -185,8 +179,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:20.493015Z",
-     "start_time": "2020-06-01T01:59:20.387015Z"
+     "end_time": "2020-06-01T04:39:53.702105Z",
+     "start_time": "2020-06-01T04:39:53.596105Z"
     }
    },
    "outputs": [
@@ -212,15 +206,15 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:20.569014Z",
-     "start_time": "2020-06-01T01:59:20.496015Z"
+     "end_time": "2020-06-01T04:39:53.765105Z",
+     "start_time": "2020-06-01T04:39:53.709106Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(39251, 22)"
+       "(39251, 18)"
       ]
      },
      "execution_count": 8,
@@ -239,15 +233,15 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:20.601014Z",
-     "start_time": "2020-06-01T01:59:20.571014Z"
+     "end_time": "2020-06-01T04:39:53.811106Z",
+     "start_time": "2020-06-01T04:39:53.768105Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4815, 22)"
+       "(4815, 18)"
       ]
      },
      "execution_count": 9,
@@ -272,8 +266,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:20.616015Z",
-     "start_time": "2020-06-01T01:59:20.603014Z"
+     "end_time": "2020-06-01T04:39:53.827104Z",
+     "start_time": "2020-06-01T04:39:53.814105Z"
     }
    },
    "outputs": [],
@@ -290,8 +284,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T01:59:20.862311Z",
-     "start_time": "2020-06-01T01:59:20.619018Z"
+     "end_time": "2020-06-01T04:39:54.030103Z",
+     "start_time": "2020-06-01T04:39:53.829107Z"
     }
    },
    "outputs": [],
@@ -301,11 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T02:02:17.833860Z",
-     "start_time": "2020-06-01T02:02:17.776845Z"
+     "end_time": "2020-06-01T04:39:54.046106Z",
+     "start_time": "2020-06-01T04:39:54.033108Z"
     }
    },
    "outputs": [],
