--- a/CES Employment Data.ipynb
+++ b/CES Employment Data.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:41.681109Z",
-     "start_time": "2020-06-01T04:39:41.677109Z"
+     "end_time": "2020-06-02T03:57:43.987155Z",
+     "start_time": "2020-06-02T03:57:43.969164Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:44.271150Z",
-     "start_time": "2020-06-01T04:39:41.684105Z"
+     "end_time": "2020-06-02T03:57:46.556153Z",
+     "start_time": "2020-06-02T03:57:43.991155Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:47.887150Z",
-     "start_time": "2020-06-01T04:39:44.273103Z"
+     "end_time": "2020-06-02T03:57:50.151152Z",
+     "start_time": "2020-06-02T03:57:46.560157Z"
     }
    },
    "outputs": [],
@@ -67,6 +67,9 @@
     "CESFileName = 'resources/AllCESSeries.txt'\n",
     "SeriesFileName = 'resources/CESSeries.txt'\n",
     "IndustryFileName = 'resources/CESIndustries.txt'\n",
+    "SuperSectorFileName = 'resources\\CESSuperSector.txt'\n",
+    "DataTypeCodesFileName = 'resources\\CESDataTypeCodes.txt'\n",
+    "\n",
     "if not os.path.exists(CESFileName) :\n",
     "    url = \"https://download.bls.gov/pub/time.series/ce/ce.data.0.AllCESSeries\"\n",
     "    wget.download(url,CESFileName)\n",
@@ -77,6 +80,13 @@
     "    url = \"https://download.bls.gov/pub/time.series/ce/ce.industry\"    \n",
     "    wget.download(url,IndustryFileName)  \n",
     "\n",
+    "    url = \"https://download.bls.gov/pub/time.series/ce/ce.supersector\"    \n",
+    "    wget.download(url,SuperSectorFileName)  \n",
+    "\n",
+    "    url = \"https://download.bls.gov/pub/time.series/ce/ce.datatype\"    \n",
+    "    wget.download(url,DataTypeCodesFileName)  \n",
+    "    \n",
+    "\n",
     "allCES =  pd.read_table(CESFileName, sep='\\t', header=0,names=['series_id', 'year', 'period', 'value', 'footnote_codes'])    \n",
     "\n",
     "seriesDF =  pd.read_table(SeriesFileName, sep='\\t', header=0,\n",
@@ -84,6 +94,15 @@
     "                          dtype = {'supersector_code':np.str_,  'industry_code':np.str_,'data_type_code':np.str_})    \n",
     "\n",
     "industriesDF =  pd.read_table(IndustryFileName, sep='\\t', header=0,dtype={'industry_code':np.str_,'naics_code':np.str_})    \n",
+    "\n",
+    "\n",
+    "SuperSectorDF =  pd.read_table(SuperSectorFileName, sep='\\t', header=0,names=['supersector_code','supersector_name'],\n",
+    "                               dtype={'supersector_code':np.str_})    \n",
+    "\n",
+    "DataTypeCodesDF =  pd.read_table(DataTypeCodesFileName, sep='\\t', header=0,names=['data_type_code','data_type_text'],\n",
+    "                               dtype={'data_type_code':np.str_})    \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -92,8 +111,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:50.150103Z",
-     "start_time": "2020-06-01T04:39:47.889105Z"
+     "end_time": "2020-06-02T03:57:52.591333Z",
+     "start_time": "2020-06-02T03:57:50.155152Z"
     }
    },
    "outputs": [],
@@ -110,15 +129,15 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:53.532113Z",
-     "start_time": "2020-06-01T04:39:50.152105Z"
+     "end_time": "2020-06-02T03:57:56.162331Z",
+     "start_time": "2020-06-02T03:57:52.592316Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(39251, 6)"
+       "(804591, 6)"
       ]
      },
      "execution_count": 5,
@@ -129,7 +148,7 @@
    "source": [
     "# Only interested in 2020\n",
     "# CES Seasonally Adjusted\n",
-    "condition = allCES['year'].isin([2020]) & allCES['series_id'].str.startswith('CES')\n",
+    "condition = allCES['year'].isin([2015,2016,2017,2018,2019,2020]) & allCES['series_id'].str.startswith('CES')\n",
     "CES2020DF = allCES[condition]\n",
     "CES2020DF.shape"
    ]
@@ -139,8 +158,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:53.593106Z",
-     "start_time": "2020-06-01T04:39:53.534108Z"
+     "end_time": "2020-06-02T03:57:56.691325Z",
+     "start_time": "2020-06-02T03:57:56.164319Z"
     }
    },
    "outputs": [
@@ -179,15 +198,15 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:53.702105Z",
-     "start_time": "2020-06-01T04:39:53.596105Z"
+     "end_time": "2020-06-02T03:57:57.220320Z",
+     "start_time": "2020-06-02T03:57:56.693314Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(39251, 12)"
+       "(804591, 12)"
       ]
      },
      "execution_count": 7,
@@ -206,15 +225,15 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:53.765105Z",
-     "start_time": "2020-06-01T04:39:53.709106Z"
+     "end_time": "2020-06-02T03:57:57.562318Z",
+     "start_time": "2020-06-02T03:57:57.227316Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(39251, 18)"
+       "(804591, 18)"
       ]
      },
      "execution_count": 8,
@@ -233,18 +252,72 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:53.811106Z",
-     "start_time": "2020-06-01T04:39:53.768105Z"
+     "end_time": "2020-06-02T03:57:57.890315Z",
+     "start_time": "2020-06-02T03:57:57.565317Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4815, 18)"
+       "(804591, 19)"
       ]
      },
      "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge with SupoerSector DF\n",
+    "CES2020DF = pd.merge(CES2020DF,SuperSectorDF,on='supersector_code',how='left')\n",
+    "CES2020DF.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-02T03:57:58.249316Z",
+     "start_time": "2020-06-02T03:57:57.892315Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(804591, 20)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge with DataTypeCodesDF\n",
+    "CES2020DF = pd.merge(CES2020DF,DataTypeCodesDF,on='data_type_code',how='left')\n",
+    "CES2020DF.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-02T03:57:58.546828Z",
+     "start_time": "2020-06-02T03:57:58.252319Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(97155, 20)"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,11 +336,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:53.827104Z",
-     "start_time": "2020-06-01T04:39:53.814105Z"
+     "end_time": "2020-06-02T03:57:58.578877Z",
+     "start_time": "2020-06-02T03:57:58.548885Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#CES2020DF.columns\n",
+    "\n",
+    "CES2020DF.drop(['naics_code','industry_name','display_level','selectable','sort_sequence','industry_code_y','footnote_codes_y','publishing_status'],1,inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-02T03:57:58.610878Z",
+     "start_time": "2020-06-02T03:57:58.581875Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3958, 12)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "industries_codes = {\"Total Nonfarm\":\"00000000\", \"Total Private\":\"05000000\",  \"Goods Producing\":\"06000000\", \"Service-Providing\":\"07000000\", \n",
+    "\"Private Service Providing\":\"08000000\",\"Mining and Logging\":\"10000000\",\"Mining, Logging and Construction\":\"15000000\",\n",
+    "\"Construction\":\"20000000\",\"Manufacturing\":\"30000000\",\"Durable Goods\":\"31000000\",\"Non-Durable Goods\":\"32000000\",\n",
+    "\"Trade, Transportation, and Utilities\":\"40000000\",\"Wholesale Trade\":\"41000000\",\"Retail Trade\":\"42000000\",\n",
+    "\"Transportation, Warehousing, and Utilities\":\"43000000\",\"Information\":\"50000000\",\"Financial Activities\":\"55000000\",\n",
+    "\"Finance and Insurance\":\"55520000\",\"Real Estate and Rental and Leasing\":\"55530000\",\"Professional and Business Services\":\"60000000\", \n",
+    "\"Professional, Scientific, and Technical Services\":\"60540000\", \"Management of Companies and Enterprises\":\"60550000\", \n",
+    "\"Administrative and Support and Waste Mgt\":\"60560000\", \"Education and Health Services\":\"65000000\", \n",
+    "\"Educational Services\":\"65610000\", \"Health Care and Social Assistance\":\"65620000\", \"Leisure and Hospitality\":\"70000000\",\n",
+    "\"Arts, Entertainment, and Recreation\":\"70710000\",\"Accommodation and Food Services\":\"70720000\", \"Other Services\":\"80000000\", \n",
+    "\"Government\":\"90000000\",\"Federal Government\":\"90910000\",\"State Government\":\"90920000\",\"Local Government\":\"90930000\"}\n",
+    "\n",
+    "codes =[ v for v in industries_codes.values() ]\n",
+    "\n",
+    "condition = CES2020DF['industry_code_x'].isin(codes)\n",
+    "CES2020DF = CES2020DF[condition]\n",
+    "CES2020DF.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-02T03:58:17.147960Z",
+     "start_time": "2020-06-02T03:57:58.614876Z"
     }
    },
    "outputs": [],
@@ -275,17 +405,17 @@
     "# Browse the data\n",
     "# uncomment the following lines to browse the data\n",
     "\n",
-    "#d = dtale.show(CES2020DF, ignore_duplicate=True)\n",
-    "#d.open_browser()"
+    "d = dtale.show(CES2020DF, ignore_duplicate=True)\n",
+    "d.open_browser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:54.030103Z",
-     "start_time": "2020-06-01T04:39:53.829107Z"
+     "end_time": "2020-06-02T03:58:17.225960Z",
+     "start_time": "2020-06-02T03:58:17.150964Z"
     }
    },
    "outputs": [],
@@ -295,11 +425,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-01T04:39:54.046106Z",
-     "start_time": "2020-06-01T04:39:54.033108Z"
+     "end_time": "2020-06-02T03:58:17.255963Z",
+     "start_time": "2020-06-02T03:58:17.228961Z"
     }
    },
    "outputs": [],
@@ -318,9 +448,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python361064bitpythondatacondaec7e8270480d4d8a925de6dc1659eacb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -332,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
