Updated LN dataset, Renamed Explore & clean

--- a/LN  Data.ipynb
+++ b/LN  Data.ipynb
@@ -5,54 +5,16 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:43.156159Z",
-     "start_time": "2020-06-02T03:25:28.446222Z"
+     "end_time": "2020-06-03T12:30:34.496928Z",
+     "start_time": "2020-06-03T12:30:34.487924Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: wget in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (3.2)\n",
-      "Requirement already satisfied: dtale in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (1.7.15)\n",
-      "Requirement already satisfied: itsdangerous in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (1.1.0)\n",
-      "Requirement already satisfied: scipy in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (1.4.1)\n",
-      "Requirement already satisfied: flask-ngrok; python_version > \"3.0\" in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (0.0.25)\n",
-      "Requirement already satisfied: dash>=1.5.0 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (1.9.1)\n",
-      "Requirement already satisfied: Flask>=1.0 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (1.1.1)\n",
-      "Requirement already satisfied: requests in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (2.23.0)\n",
-      "Requirement already satisfied: future>=0.14.0 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (0.18.2)\n",
-      "Requirement already satisfied: pandas in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (1.0.4)\n",
-      "Requirement already satisfied: lz4; python_version > \"3.0\" in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (3.0.2)\n",
-      "Requirement already satisfied: dash-daq in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (0.4.0)\n",
-      "Requirement already satisfied: Flask-Compress in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (1.4.0)\n",
-      "Requirement already satisfied: six in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dtale) (1.14.0)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from scipy->dtale) (1.18.1)\n",
-      "Requirement already satisfied: dash-html-components==1.0.2 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dash>=1.5.0->dtale) (1.0.2)\n",
-      "Requirement already satisfied: dash-table==4.6.1 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dash>=1.5.0->dtale) (4.6.1)\n",
-      "Requirement already satisfied: plotly in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dash>=1.5.0->dtale) (4.5.4)\n",
-      "Requirement already satisfied: dash-core-components==1.8.1 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dash>=1.5.0->dtale) (1.8.1)\n",
-      "Requirement already satisfied: dash-renderer==1.2.4 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from dash>=1.5.0->dtale) (1.2.4)\n",
-      "Requirement already satisfied: Jinja2>=2.10.1 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from Flask>=1.0->dtale) (2.11.1)\n",
-      "Requirement already satisfied: click>=5.1 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from Flask>=1.0->dtale) (7.0)\n",
-      "Requirement already satisfied: Werkzeug>=0.15 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from Flask>=1.0->dtale) (1.0.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests->dtale) (2019.11.28)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests->dtale) (2.8)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests->dtale) (1.25.8)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests->dtale) (3.0.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from pandas->dtale) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from pandas->dtale) (2019.3)\n",
-      "Requirement already satisfied: retrying>=1.3.3 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from plotly->dash>=1.5.0->dtale) (1.3.3)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in e:\\anaconda3\\envs\\pythondata\\lib\\site-packages (from Jinja2>=2.10.1->Flask>=1.0->dtale) (1.1.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# May need to install these....\n",
     "# uncomment if unsure\n",
-    "!pip install wget\n",
-    "!pip install dtale"
+    "# !pip install wget\n",
+    "# !pip install dtale"
    ]
   },
   {
@@ -60,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:45.929393Z",
-     "start_time": "2020-06-02T03:25:43.159161Z"
+     "end_time": "2020-06-03T12:30:38.022969Z",
+     "start_time": "2020-06-03T12:30:34.499926Z"
     }
    },
    "outputs": [],
@@ -93,8 +55,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:49.978964Z",
-     "start_time": "2020-06-02T03:25:45.932348Z"
+     "end_time": "2020-06-03T12:30:44.486923Z",
+     "start_time": "2020-06-03T12:30:38.029928Z"
     }
    },
    "outputs": [
@@ -140,7 +102,12 @@
     "                            dtype = {'indy_code':np.str_,  'ages_code':np.str_,'education_code':np.str_,'race_code':np.str_}) \n",
     "\n",
     "\n",
-    "\n"
+    "industriesDF =  pd.read_table(lnIndustryFileName, sep='\\t', header=0,dtype={'indy_code':np.str_})    \n",
+    "\n",
+    "#Clean up spaces on the series_id\n",
+    "allLN['series_id'] = allLN['series_id'].str.strip()\n",
+    "LNSeriesDF['series_id'] = LNSeriesDF['series_id'].str.strip()\n",
+    "#LNSeriesDF.head()"
    ]
   },
   {
@@ -148,75 +115,39 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:49.993946Z",
-     "start_time": "2020-06-02T03:25:49.980948Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "industriesDF =  pd.read_table(lnIndustryFileName, sep='\\t', header=0,dtype={'indy_code':np.str_})    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-01T04:22:41.596324Z",
-     "start_time": "2020-06-01T04:22:41.573318Z"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-01T04:18:34.687580Z",
-     "start_time": "2020-06-01T04:18:34.677581Z"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:52.698090Z",
-     "start_time": "2020-06-02T03:25:49.996948Z"
+     "end_time": "2020-06-03T12:30:47.336924Z",
+     "start_time": "2020-06-03T12:30:44.488925Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59611, 5)"
+       "(1018288, 5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Only interested in 2020\n",
+    "# Only interested in 2015-2020\n",
+    "# Monthly data (not quarterly)\n",
     "# CES Seasonally Adjusted\n",
-    "condition = allLN['year'].isin([2020])  & allLN['period'].str.startswith('M')\n",
+    "condition = allLN['year'].isin([2015,2016,2017,2018,2019,2020])  & allLN['period'].str.startswith('M')\n",
     "LNS2020DF = allLN[condition]\n",
-    "LNS2020DF.shape"
+    "LNS2020DF.shape\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:52.775083Z",
-     "start_time": "2020-06-02T03:25:52.700107Z"
+     "end_time": "2020-06-03T12:30:48.118930Z",
+     "start_time": "2020-06-03T12:30:47.339923Z"
     }
    },
    "outputs": [
@@ -244,10 +175,10 @@
     {
      "data": {
       "text/plain": [
-       "(59611, 5)"
+       "(1018288, 5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,21 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:52.991086Z",
-     "start_time": "2020-06-02T03:25:52.777085Z"
+     "end_time": "2020-06-03T12:30:50.651939Z",
+     "start_time": "2020-06-03T12:30:48.122945Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59611, 45)"
+       "(1018288, 45)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,21 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:53.054098Z",
-     "start_time": "2020-06-02T03:25:52.994084Z"
+     "end_time": "2020-06-03T12:30:51.289928Z",
+     "start_time": "2020-06-03T12:30:50.653923Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59611, 46)"
+       "(1018288, 46)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,18 +247,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T12:30:51.877924Z",
+     "start_time": "2020-06-03T12:30:51.292927Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1018288, 15)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LNS2020DF.drop(['jdes_code','absn_code','cert_code','rjnw_code', 'begin_year',\n",
+    "                'begin_period', 'end_year', 'end_period', 'hheader_code', 'hour_code', 'indy_code', 'look_code',\n",
+    "       'mari_code', 'mjhs_code', 'occupation_code', 'orig_code', 'pcts_code',\n",
+    "       'race_code', 'rnlf_code', 'rwns_code', 'seek_code', 'sexs_code',\n",
+    "       'tdat_code', 'vets_code', 'wkst_code', 'born_code', 'chld_code',\n",
+    "       'disa_code', 'seasonal', 'footnote_codes_x','footnote_codes_y'],1,inplace=True)\n",
+    "\n",
+    "LNS2020DF.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:53.101099Z",
-     "start_time": "2020-06-02T03:25:53.056086Z"
+     "end_time": "2020-06-03T12:30:51.987924Z",
+     "start_time": "2020-06-03T12:30:51.879927Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1280, 15)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "LNS2020DF.drop(['jdes_code','absn_code','cert_code','rjnw_code', 'begin_year',\n",
-    "                'begin_period', 'end_year', 'end_period'],1,inplace=True)\n",
-    "\n"
+    "\n",
+    "Series_of_interest = [\n",
+    "    'LNS11000000', # Labor Force \n",
+    "    'LNS11000001', # Labor Force Level Men\n",
+    "    'LNS11000002', # Labor Force Level Women\n",
+    "#     'LNS11000003', # Race White\n",
+    "#     'LNS11000006', # Black or African American\n",
+    "#     'LNS11032183', # Asian\n",
+    "#     'LNS11000009', # Hispanic or Latino\n",
+    "#     'LNS11000012', # 16-19\n",
+    "#     'LNS11000024', # 20 years & older\n",
+    "#     'LNS11300036', # 20-24\n",
+    "#     'LNS11300089', # 25-34\n",
+    "#     'LNS11300091', # 35-44\n",
+    "#     'LNS11300093', # 45-54\n",
+    "#     'LNS11324230', # 55 and over\n",
+    "    \n",
+    "#     'LNS11327659', # Less than HS\n",
+    "#     'LNS11327660', # HS No college\n",
+    "#     'LNS11327662', # Bachelor's degree and higher\n",
+    "#     'LNS11327689', #Some College or Associate Degree\n",
+    "#     'LNS12000000', # Employment Level\n",
+    "    \n",
+    "    'LNS13000000', # Unemployment Level\n",
+    "    'LNS13000001', # Unemployment Level Men\n",
+    "    'LNS13000002', # Unemployment Level Women\n",
+    "    'LNS13000003', # Unemployment Level White\n",
+    "    'LNS13000006', # Unemployment Level Black or African American\n",
+    "    'LNS13000009', # Unemployment Level Hispanic or Latino\n",
+    "    'LNS13032183', # Unemployment Level Asian\n",
+    "    'LNS13000012', # Unemployment Level 16-19\n",
+    "    'LNS13000036', # Unemployment Level 20-24\n",
+    "    'LNS13000089', # Unemployment Level 25-34\n",
+    "    'LNS13000091', # Unemployment Level 35-44\n",
+    "    'LNS11300093', # Unemployment Level 45-54\n",
+    "    'LNS13024230', # Unemployment Level 55 and over\n",
+    "    'LNS13027659', # Unemployment Level Less than HS\n",
+    "    'LNS13027660', # Unemployment Level HS No college\n",
+    "    'LNS13027662', # Unemployment Level Bachelor's degree and higher\n",
+    "    'LNS13027689', # Unemployment Level Some College or Associate Degree   \n",
+    "]    \n",
+    "\n",
+    "condition =LNS2020DF['series_id'].isin(Series_of_interest) \n",
+    "LNS2020DF = LNS2020DF[condition]\n",
+    "LNS2020DF.shape"
    ]
   },
   {
@@ -335,17 +351,14 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:53.117097Z",
-     "start_time": "2020-06-02T03:25:53.103086Z"
+     "end_time": "2020-06-03T12:31:10.656102Z",
+     "start_time": "2020-06-03T12:30:51.989924Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Browse the data\n",
-    "# uncomment the following lines to browse the data\n",
-    "\n",
-    "#d = dtale.show(LNS2020DF, ignore_duplicate=True)\n",
-    "#d.open_browser()"
+    "d = dtale.show(LNS2020DF, ignore_duplicate=True)\n",
+    "d.open_browser()"
    ]
   },
   {
@@ -353,8 +366,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:54.870668Z",
-     "start_time": "2020-06-02T03:25:53.119084Z"
+     "end_time": "2020-06-03T12:31:10.703149Z",
+     "start_time": "2020-06-03T12:31:10.658086Z"
     }
    },
    "outputs": [],
@@ -367,8 +380,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T03:25:55.010667Z",
-     "start_time": "2020-06-02T03:25:54.874670Z"
+     "end_time": "2020-06-03T12:31:10.719150Z",
+     "start_time": "2020-06-03T12:31:10.705131Z"
     }
    },
    "outputs": [],
