Added Explore and clean labor stats

--- a/CES Employment Data.ipynb
+++ b/CES Employment Data.ipynb
@@ -432,7 +432,36 @@
      "start_time": "2020-06-03T12:33:27.699135Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing shutdown due to inactivity...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-06-03 08:33:42,420 - INFO     - Executing shutdown due to inactivity...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing shutdown...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-06-03 08:33:58,655 - INFO     - Executing shutdown...\n"
+     ]
+    }
+   ],
    "source": [
     "# to load Picke file use the following once pickle has been generated\n",
     "CES2020DF_2=pd.read_pickle('resources/CES2020.pkl',compression='gzip')"
