--- a/LN  Data.ipynb
+++ b/LN  Data.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:34.496928Z",
-     "start_time": "2020-06-03T12:30:34.487924Z"
+     "end_time": "2020-06-03T14:06:17.559785Z",
+     "start_time": "2020-06-03T14:06:17.547785Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:38.022969Z",
-     "start_time": "2020-06-03T12:30:34.499926Z"
+     "end_time": "2020-06-03T14:06:20.256803Z",
+     "start_time": "2020-06-03T14:06:17.563785Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:44.486923Z",
-     "start_time": "2020-06-03T12:30:38.029928Z"
+     "end_time": "2020-06-03T14:06:26.752782Z",
+     "start_time": "2020-06-03T14:06:20.259783Z"
     }
    },
    "outputs": [
@@ -99,7 +99,7 @@
     "                                   'sexs_code', 'tdat_code', 'vets_code', 'wkst_code', 'born_code',\n",
     "                                   'chld_code', 'disa_code', 'seasonal', 'footnote_codes', 'begin_year',\n",
     "                                   'begin_period', 'end_year', 'end_period'],\n",
-    "                            dtype = {'indy_code':np.str_,  'ages_code':np.str_,'education_code':np.str_,'race_code':np.str_}) \n",
+    "                            dtype = { 'value':float,'indy_code':np.str_,  'ages_code':np.str_,'education_code':np.str_,'race_code':np.str_}) \n",
     "\n",
     "\n",
     "industriesDF =  pd.read_table(lnIndustryFileName, sep='\\t', header=0,dtype={'indy_code':np.str_})    \n",
@@ -115,8 +115,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:47.336924Z",
-     "start_time": "2020-06-03T12:30:44.488925Z"
+     "end_time": "2020-06-03T14:06:29.730783Z",
+     "start_time": "2020-06-03T14:06:26.754782Z"
     }
    },
    "outputs": [
@@ -146,8 +146,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:48.118930Z",
-     "start_time": "2020-06-03T12:30:47.339923Z"
+     "end_time": "2020-06-03T14:06:30.416794Z",
+     "start_time": "2020-06-03T14:06:29.734785Z"
     }
    },
    "outputs": [
@@ -197,8 +197,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:50.651939Z",
-     "start_time": "2020-06-03T12:30:48.122945Z"
+     "end_time": "2020-06-03T14:06:32.924785Z",
+     "start_time": "2020-06-03T14:06:30.420786Z"
     }
    },
    "outputs": [
@@ -224,8 +224,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:51.289928Z",
-     "start_time": "2020-06-03T12:30:50.653923Z"
+     "end_time": "2020-06-03T14:06:33.576783Z",
+     "start_time": "2020-06-03T14:06:32.927785Z"
     }
    },
    "outputs": [
@@ -250,8 +250,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:51.877924Z",
-     "start_time": "2020-06-03T12:30:51.292927Z"
+     "end_time": "2020-06-03T14:06:34.155782Z",
+     "start_time": "2020-06-03T14:06:33.580786Z"
     }
    },
    "outputs": [
@@ -282,8 +282,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:30:51.987924Z",
-     "start_time": "2020-06-03T12:30:51.879927Z"
+     "end_time": "2020-06-03T14:06:34.280783Z",
+     "start_time": "2020-06-03T14:06:34.159784Z"
     }
    },
    "outputs": [
@@ -351,14 +351,14 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:31:10.656102Z",
-     "start_time": "2020-06-03T12:30:51.989924Z"
+     "end_time": "2020-06-03T14:06:34.310803Z",
+     "start_time": "2020-06-03T14:06:34.282785Z"
     }
    },
    "outputs": [],
    "source": [
-    "d = dtale.show(LNS2020DF, ignore_duplicate=True)\n",
-    "d.open_browser()"
+    "# d = dtale.show(LNS2020DF, ignore_duplicate=True)\n",
+    "# d.open_browser()"
    ]
   },
   {
@@ -366,8 +366,22 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:31:10.703149Z",
-     "start_time": "2020-06-03T12:31:10.658086Z"
+     "end_time": "2020-06-03T14:06:34.326798Z",
+     "start_time": "2020-06-03T14:06:34.312783Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "LNS2020DF['value'] = pd.to_numeric(LNS2020DF['value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T14:06:34.372804Z",
+     "start_time": "2020-06-03T14:06:34.328783Z"
     }
    },
    "outputs": [],
@@ -377,11 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:31:10.719150Z",
-     "start_time": "2020-06-03T12:31:10.705131Z"
+     "end_time": "2020-06-03T14:06:34.387783Z",
+     "start_time": "2020-06-03T14:06:34.374783Z"
     }
    },
    "outputs": [],
