added employee statistics

--- a/CES Employment Data.ipynb
+++ b/CES Employment Data.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:32:51.035739Z",
-     "start_time": "2020-06-03T12:32:51.017756Z"
+     "end_time": "2020-06-04T03:07:05.726130Z",
+     "start_time": "2020-06-04T03:07:05.723130Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:32:54.190737Z",
-     "start_time": "2020-06-03T12:32:51.038741Z"
+     "end_time": "2020-06-04T03:07:08.393180Z",
+     "start_time": "2020-06-04T03:07:05.729129Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:32:59.057748Z",
-     "start_time": "2020-06-03T12:32:54.193746Z"
+     "end_time": "2020-06-04T03:07:15.909198Z",
+     "start_time": "2020-06-04T03:07:08.395177Z"
     }
    },
    "outputs": [],
@@ -69,6 +69,8 @@
     "IndustryFileName = 'resources/CESIndustries.txt'\n",
     "SuperSectorFileName = 'resources\\CESSuperSector.txt'\n",
     "DataTypeCodesFileName = 'resources\\CESDataTypeCodes.txt'\n",
+    "\n",
+    "SeriesShortFileName = 'resources\\CESSeries_short.csv'\n",
     "\n",
     "if not os.path.exists(CESFileName) :\n",
     "    url = \"https://download.bls.gov/pub/time.series/ce/ce.data.0.AllCESSeries\"\n",
@@ -102,8 +104,11 @@
     "DataTypeCodesDF =  pd.read_table(DataTypeCodesFileName, sep='\\t', header=0,names=['data_type_code','data_type_text'],\n",
     "                               dtype={'data_type_code':np.str_})    \n",
     "\n",
+    "seriesShortDF =  pd.read_csv(SeriesShortFileName ) \n",
     "\n",
-    "\n"
+    "#Clean up spaces on the series_id\n",
+    "allCES['series_id'] = allCES['series_id'].str.strip()\n",
+    "seriesDF['series_id'] = seriesDF['series_id'].str.strip()\n"
    ]
   },
   {
@@ -111,8 +116,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:01.701946Z",
-     "start_time": "2020-06-03T12:32:59.060737Z"
+     "end_time": "2020-06-04T03:07:18.797323Z",
+     "start_time": "2020-06-04T03:07:15.912179Z"
     }
    },
    "outputs": [],
@@ -129,8 +134,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:05.473930Z",
-     "start_time": "2020-06-03T12:33:01.703928Z"
+     "end_time": "2020-06-04T03:07:23.115305Z",
+     "start_time": "2020-06-04T03:07:18.804307Z"
     }
    },
    "outputs": [
@@ -158,8 +163,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:06.019932Z",
-     "start_time": "2020-06-03T12:33:05.475930Z"
+     "end_time": "2020-06-04T03:07:23.704309Z",
+     "start_time": "2020-06-04T03:07:23.117307Z"
     }
    },
    "outputs": [
@@ -198,8 +203,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:06.532930Z",
-     "start_time": "2020-06-03T12:33:06.022930Z"
+     "end_time": "2020-06-04T03:07:24.359307Z",
+     "start_time": "2020-06-04T03:07:23.707309Z"
     }
    },
    "outputs": [
@@ -225,8 +230,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:06.932929Z",
-     "start_time": "2020-06-03T12:33:06.536932Z"
+     "end_time": "2020-06-04T03:07:24.794310Z",
+     "start_time": "2020-06-04T03:07:24.363311Z"
     }
    },
    "outputs": [
@@ -252,8 +257,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:07.412930Z",
-     "start_time": "2020-06-03T12:33:06.935930Z"
+     "end_time": "2020-06-04T03:07:25.169304Z",
+     "start_time": "2020-06-04T03:07:24.796310Z"
     }
    },
    "outputs": [
@@ -279,8 +284,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:07.830931Z",
-     "start_time": "2020-06-03T12:33:07.415931Z"
+     "end_time": "2020-06-04T03:07:25.589314Z",
+     "start_time": "2020-06-04T03:07:25.171308Z"
     }
    },
    "outputs": [
@@ -306,8 +311,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:08.141927Z",
-     "start_time": "2020-06-03T12:33:07.835930Z"
+     "end_time": "2020-06-04T03:07:25.978307Z",
+     "start_time": "2020-06-04T03:07:25.593314Z"
     }
    },
    "outputs": [
@@ -339,15 +344,15 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:08.171936Z",
-     "start_time": "2020-06-03T12:33:08.143929Z"
+     "end_time": "2020-06-04T03:07:26.009308Z",
+     "start_time": "2020-06-04T03:07:25.980307Z"
     }
    },
    "outputs": [],
    "source": [
     "#CES2020DF.columns\n",
     "\n",
-    "CES2020DF.drop(['naics_code','industry_name','display_level','selectable','sort_sequence','industry_code_y','footnote_codes_y','publishing_status'],1,inplace=True)\n"
+    "CES2020DF.drop(['seasonal','footnote_codes_x','naics_code','industry_name','display_level','selectable','sort_sequence','industry_code_y','footnote_codes_y','publishing_status'],1,inplace=True)\n"
    ]
   },
   {
@@ -355,15 +360,15 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:08.202931Z",
-     "start_time": "2020-06-03T12:33:08.174929Z"
+     "end_time": "2020-06-04T03:07:26.041310Z",
+     "start_time": "2020-06-04T03:07:26.011307Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3958, 12)"
+       "(3958, 10)"
       ]
      },
      "execution_count": 13,
@@ -396,17 +401,26 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:27.125768Z",
-     "start_time": "2020-06-03T12:33:08.204929Z"
+     "end_time": "2020-06-04T03:07:26.056320Z",
+     "start_time": "2020-06-04T03:07:26.043308Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3958, 11)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Browse the data\n",
-    "# uncomment the following lines to browse the data\n",
-    "\n",
-    "d = dtale.show(CES2020DF, ignore_duplicate=True)\n",
-    "d.open_browser()"
+    "CES2020DF = pd.merge(CES2020DF,seriesShortDF,on='series_id',how='left')\n",
+    "CES2020DF.shape\n",
+    "\n"
    ]
   },
   {
@@ -414,8 +428,25 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:27.697124Z",
-     "start_time": "2020-06-03T12:33:27.127768Z"
+     "end_time": "2020-06-04T03:07:44.680818Z",
+     "start_time": "2020-06-04T03:07:26.060310Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Browse the data\n",
+    "# uncomment the following lines to browse the data\n",
+    "d = dtale.show(CES2020DF, ignore_duplicate=True)\n",
+    "d.open_browser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-04T03:07:44.802817Z",
+     "start_time": "2020-06-04T03:07:44.682818Z"
     }
    },
    "outputs": [],
@@ -425,43 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T12:33:27.713147Z",
-     "start_time": "2020-06-03T12:33:27.699135Z"
+     "end_time": "2020-06-04T03:07:44.817819Z",
+     "start_time": "2020-06-04T03:07:44.804817Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing shutdown due to inactivity...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-06-03 08:33:42,420 - INFO     - Executing shutdown due to inactivity...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing shutdown...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-06-03 08:33:58,655 - INFO     - Executing shutdown...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# to load Picke file use the following once pickle has been generated\n",
     "CES2020DF_2=pd.read_pickle('resources/CES2020.pkl',compression='gzip')"
