fix industry underscores

--- a/Explore_&Clean_Employee_Statistics.ipynb
+++ b/Explore_&Clean_Employee_Statistics.ipynb
@@ -1743,7 +1743,7 @@
     "        'All employees administrative and waste services': 'admin_and_waste_services',\n",
     "        'All employees arts entertainment and recreation': 'arts_entertainment_and_recreation',\n",
     "        'All employees construction':'construction',\n",
-    "        'All employees durable goods': 'durable goods',\n",
+    "        'All employees durable goods': 'durable_goods',\n",
     "        'All employees education and health services': 'edu_and_health_services',\n",
     "        'All employees educational services':'educational_services',\n",
     "        'All employees federal':'federal',\n",
