--- a/LN  Data.ipynb
+++ b/LN  Data.ipynb
@@ -64,9 +64,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "e:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning:\n",
+      "/Users/harinirao/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning:\n",
       "\n",
-      "Columns (3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
      ]
     }
@@ -123,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "(1018288, 5)"
+       "(1033192, 5)"
       ]
      },
      "execution_count": 4,
@@ -155,27 +155,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "e:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning:\n",
+      "/Users/harinirao/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
-      "e:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\frame.py:3997: SettingWithCopyWarning:\n",
+      "/Users/harinirao/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:4102: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1018288, 5)"
+       "(1033192, 5)"
       ]
      },
      "execution_count": 5,
@@ -205,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "(1018288, 45)"
+       "(1033192, 45)"
       ]
      },
      "execution_count": 6,
@@ -232,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "(1018288, 46)"
+       "(1033192, 46)"
       ]
      },
      "execution_count": 7,
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "(1018288, 15)"
+       "(1033192, 15)"
       ]
      },
      "execution_count": 8,
@@ -290,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "(1280, 15)"
+       "(1300, 15)"
       ]
      },
      "execution_count": 9,
@@ -333,7 +333,7 @@
     "    'LNS13000036', # Unemployment Level 20-24\n",
     "    'LNS13000089', # Unemployment Level 25-34\n",
     "    'LNS13000091', # Unemployment Level 35-44\n",
-    "    'LNS11300093', # Unemployment Level 45-54\n",
+    "    'LNS13000093', # Unemployment Level 45-54\n",
     "    'LNS13024230', # Unemployment Level 55 and over\n",
     "    'LNS13027659', # Unemployment Level Less than HS\n",
     "    'LNS13027660', # Unemployment Level HS No college\n",
@@ -414,9 +414,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python361064bitpythondatacondaec7e8270480d4d8a925de6dc1659eacb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -428,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
