--- a/Explore_&_Clean_States.ipynb
+++ b/Explore_&_Clean_States.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.660305Z",
-     "start_time": "2020-06-02T18:46:37.315287Z"
+     "end_time": "2020-06-05T19:10:30.168076Z",
+     "start_time": "2020-06-05T19:10:28.576060Z"
     }
    },
    "outputs": [
@@ -145,8 +145,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.690289Z",
-     "start_time": "2020-06-02T18:46:38.668287Z"
+     "end_time": "2020-06-05T19:10:30.184061Z",
+     "start_time": "2020-06-05T19:10:30.171061Z"
     }
    },
    "outputs": [
@@ -178,8 +178,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.706296Z",
-     "start_time": "2020-06-02T18:46:38.694288Z"
+     "end_time": "2020-06-05T19:10:30.214060Z",
+     "start_time": "2020-06-05T19:10:30.191062Z"
     }
    },
    "outputs": [],
@@ -195,8 +195,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.722289Z",
-     "start_time": "2020-06-02T18:46:38.710288Z"
+     "end_time": "2020-06-05T19:10:30.230059Z",
+     "start_time": "2020-06-05T19:10:30.218064Z"
     }
    },
    "outputs": [],
@@ -212,8 +212,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.737289Z",
-     "start_time": "2020-06-02T18:46:38.724289Z"
+     "end_time": "2020-06-05T19:10:30.245059Z",
+     "start_time": "2020-06-05T19:10:30.233062Z"
     }
    },
    "outputs": [
@@ -245,8 +245,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.769287Z",
-     "start_time": "2020-06-02T18:46:38.739289Z"
+     "end_time": "2020-06-05T19:10:30.260061Z",
+     "start_time": "2020-06-05T19:10:30.248062Z"
     }
    },
    "outputs": [
@@ -273,21 +273,21 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.784292Z",
-     "start_time": "2020-06-02T18:46:38.771287Z"
+     "end_time": "2020-06-05T19:10:30.276060Z",
+     "start_time": "2020-06-05T19:10:30.263062Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "state                        14893\n",
-       "filed_week_ended             14893\n",
-       "initial_claim                14893\n",
-       "reflecting_week_ended        14893\n",
-       "continued_claims             14893\n",
-       "covered_employment           14893\n",
-       "insured_unemployment_rate    14893\n",
+       "state                        14946\n",
+       "filed_week_ended             14946\n",
+       "initial_claim                14946\n",
+       "reflecting_week_ended        14946\n",
+       "continued_claims             14946\n",
+       "covered_employment           14946\n",
+       "insured_unemployment_rate    14946\n",
        "dtype: int64"
       ]
      },
@@ -306,8 +306,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.800287Z",
-     "start_time": "2020-06-02T18:46:38.787289Z"
+     "end_time": "2020-06-05T19:10:30.291062Z",
+     "start_time": "2020-06-05T19:10:30.280063Z"
     }
    },
    "outputs": [],
@@ -321,21 +321,21 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:38.815290Z",
-     "start_time": "2020-06-02T18:46:38.803286Z"
+     "end_time": "2020-06-05T19:10:30.322061Z",
+     "start_time": "2020-06-05T19:10:30.294063Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "state                        14893\n",
-       "filed_week_ended             14893\n",
-       "initial_claim                14893\n",
-       "reflecting_week_ended        14893\n",
-       "continued_claims             14893\n",
-       "covered_employment           14893\n",
-       "insured_unemployment_rate    14893\n",
+       "state                        14946\n",
+       "filed_week_ended             14946\n",
+       "initial_claim                14946\n",
+       "reflecting_week_ended        14946\n",
+       "continued_claims             14946\n",
+       "covered_employment           14946\n",
+       "insured_unemployment_rate    14946\n",
        "dtype: int64"
       ]
      },
@@ -351,74 +351,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:45.460462Z",
-     "start_time": "2020-06-02T18:46:45.445459Z"
+     "end_time": "2020-06-05T19:10:30.353063Z",
+     "start_time": "2020-06-05T19:10:30.326061Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Illinois                281\n",
-       "Hawaii                  281\n",
-       "New Jersey              281\n",
-       "South Dakota            281\n",
-       "Arizona                 281\n",
-       "North Dakota            281\n",
-       "North Carolina          281\n",
-       "Louisiana               281\n",
-       "Maine                   281\n",
-       "Virgin Islands          281\n",
-       "Washington              281\n",
-       "Colorado                281\n",
-       "Virginia                281\n",
-       "New Mexico              281\n",
-       "Wyoming                 281\n",
-       "Arkansas                281\n",
-       "Ohio                    281\n",
-       "Michigan                281\n",
-       "California              281\n",
-       "Delaware                281\n",
-       "Indiana                 281\n",
-       "Puerto Rico             281\n",
-       "Idaho                   281\n",
-       "Massachusetts           281\n",
-       "Pennsylvania            281\n",
-       "Wisconsin               281\n",
-       "New Hampshire           281\n",
-       "Tennessee               281\n",
-       "West Virginia           281\n",
-       "Nebraska                281\n",
-       "Maryland                281\n",
-       "South Carolina          281\n",
-       "Texas                   281\n",
-       "Mississippi             281\n",
-       "Nevada                  281\n",
-       "Vermont                 281\n",
-       "Kentucky                281\n",
-       "Montana                 281\n",
-       "Oklahoma                281\n",
-       "Iowa                    281\n",
-       "Utah                    281\n",
-       "Alaska                  281\n",
-       "New York                281\n",
-       "Connecticut             281\n",
-       "Florida                 281\n",
-       "Rhode Island            281\n",
-       "Georgia                 281\n",
-       "Alabama                 281\n",
-       "Minnesota               281\n",
-       "Kansas                  281\n",
-       "District of Columbia    281\n",
-       "Missouri                281\n",
-       "Oregon                  281\n",
+       "Illinois                282\n",
+       "Colorado                282\n",
+       "Florida                 282\n",
+       "Massachusetts           282\n",
+       "Mississippi             282\n",
+       "Hawaii                  282\n",
+       "Georgia                 282\n",
+       "South Carolina          282\n",
+       "Oklahoma                282\n",
+       "New Jersey              282\n",
+       "Missouri                282\n",
+       "North Carolina          282\n",
+       "Maryland                282\n",
+       "Texas                   282\n",
+       "Utah                    282\n",
+       "Michigan                282\n",
+       "Ohio                    282\n",
+       "Indiana                 282\n",
+       "Idaho                   282\n",
+       "District of Columbia    282\n",
+       "Arkansas                282\n",
+       "Virgin Islands          282\n",
+       "South Dakota            282\n",
+       "Arizona                 282\n",
+       "Rhode Island            282\n",
+       "Minnesota               282\n",
+       "Nevada                  282\n",
+       "Pennsylvania            282\n",
+       "Washington              282\n",
+       "Montana                 282\n",
+       "Alabama                 282\n",
+       "Connecticut             282\n",
+       "Virginia                282\n",
+       "Delaware                282\n",
+       "Puerto Rico             282\n",
+       "Kansas                  282\n",
+       "Kentucky                282\n",
+       "Wyoming                 282\n",
+       "New Hampshire           282\n",
+       "Oregon                  282\n",
+       "Vermont                 282\n",
+       "Louisiana               282\n",
+       "Maine                   282\n",
+       "Alaska                  282\n",
+       "New York                282\n",
+       "Tennessee               282\n",
+       "New Mexico              282\n",
+       "Iowa                    282\n",
+       "North Dakota            282\n",
+       "California              282\n",
+       "West Virginia           282\n",
+       "Nebraska                282\n",
+       "Wisconsin               282\n",
        "Name: state, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,15 +430,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-02T18:46:39.041294Z",
-     "start_time": "2020-06-02T18:46:37.329Z"
+     "end_time": "2020-06-05T19:10:30.398063Z",
+     "start_time": "2020-06-05T19:10:30.358064Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>initial_claim</th>\n",
+       "      <th>continued_claims</th>\n",
+       "      <th>covered_employment</th>\n",
+       "      <th>insured_unemployment_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.494600e+04</td>\n",
+       "      <td>1.494600e+04</td>\n",
+       "      <td>14946.0</td>\n",
+       "      <td>14946.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.943299e+03</td>\n",
+       "      <td>4.564289e+04</td>\n",
+       "      <td>2642790.0</td>\n",
+       "      <td>1.667128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.380265e+04</td>\n",
+       "      <td>1.088436e+05</td>\n",
+       "      <td>2999577.0</td>\n",
+       "      <td>2.032472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>32446.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.094000e+03</td>\n",
+       "      <td>8.666000e+03</td>\n",
+       "      <td>652934.0</td>\n",
+       "      <td>0.850000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.550000e+03</td>\n",
+       "      <td>1.991950e+04</td>\n",
+       "      <td>1797624.0</td>\n",
+       "      <td>1.240000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.608750e+03</td>\n",
+       "      <td>4.008000e+04</td>\n",
+       "      <td>3266242.0</td>\n",
+       "      <td>1.830000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.058325e+06</td>\n",
+       "      <td>4.808361e+06</td>\n",
+       "      <td>17330010.0</td>\n",
+       "      <td>31.200001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       initial_claim  continued_claims  covered_employment  \\\n",
+       "count   1.494600e+04      1.494600e+04             14946.0   \n",
+       "mean    6.943299e+03      4.564289e+04           2642790.0   \n",
+       "std     2.380265e+04      1.088436e+05           2999577.0   \n",
+       "min     0.000000e+00      0.000000e+00             32446.0   \n",
+       "25%     1.094000e+03      8.666000e+03            652934.0   \n",
+       "50%     2.550000e+03      1.991950e+04           1797624.0   \n",
+       "75%     5.608750e+03      4.008000e+04           3266242.0   \n",
+       "max     1.058325e+06      4.808361e+06          17330010.0   \n",
+       "\n",
+       "       insured_unemployment_rate  \n",
+       "count               14946.000000  \n",
+       "mean                    1.667128  \n",
+       "std                     2.032472  \n",
+       "min                     0.000000  \n",
+       "25%                     0.850000  \n",
+       "50%                     1.240000  \n",
+       "75%                     1.830000  \n",
+       "max                    31.200001  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display a statistical overview for a high level insight into the data\n",
     "df.describe()"
